--- a/Regression.ipynb
+++ b/Regression.ipynb
@@ -517,7 +517,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "id": "appropriate-sodium",
    "metadata": {
     "scrolled": false
@@ -528,12 +528,124 @@
      "output_type": "stream",
      "text": [
       "Epoch 1/150\n",
-      "30/30 [==============================] - 25s 689ms/step - loss: 9.6184 - mean_absolute_error: 9.6184 - val_loss: 6.7944 - val_mean_absolute_error: 6.7944\n",
+      "30/30 [==============================] - 17s 581ms/step - loss: 0.5727 - mean_absolute_error: 0.5727 - val_loss: 0.6576 - val_mean_absolute_error: 0.6576\n",
       "Epoch 2/150\n",
-      "30/30 [==============================] - 18s 599ms/step - loss: 6.4754 - mean_absolute_error: 6.4754 - val_loss: 6.2717 - val_mean_absolute_error: 6.2717\n",
+      "30/30 [==============================] - 17s 579ms/step - loss: 0.5600 - mean_absolute_error: 0.5600 - val_loss: 0.6638 - val_mean_absolute_error: 0.6638\n",
       "Epoch 3/150\n",
-      "11/30 [==========>...................] - ETA: 8s - loss: 6.1418 - mean_absolute_error: 6.1418"
+      "30/30 [==============================] - 17s 587ms/step - loss: 0.5613 - mean_absolute_error: 0.5613 - val_loss: 0.7177 - val_mean_absolute_error: 0.7177\n",
+      "Epoch 4/150\n",
+      "30/30 [==============================] - 17s 576ms/step - loss: 0.5672 - mean_absolute_error: 0.5672 - val_loss: 0.6525 - val_mean_absolute_error: 0.6525\n",
+      "Epoch 5/150\n",
+      "30/30 [==============================] - 17s 575ms/step - loss: 0.5389 - mean_absolute_error: 0.5389 - val_loss: 0.6312 - val_mean_absolute_error: 0.6312\n",
+      "Epoch 6/150\n",
+      "30/30 [==============================] - 17s 576ms/step - loss: 0.5527 - mean_absolute_error: 0.5527 - val_loss: 0.6238 - val_mean_absolute_error: 0.6238\n",
+      "Epoch 7/150\n",
+      "30/30 [==============================] - 17s 573ms/step - loss: 0.5580 - mean_absolute_error: 0.5580 - val_loss: 0.6321 - val_mean_absolute_error: 0.6321\n",
+      "Epoch 8/150\n",
+      "30/30 [==============================] - 17s 573ms/step - loss: 0.5430 - mean_absolute_error: 0.5430 - val_loss: 0.6433 - val_mean_absolute_error: 0.6433\n",
+      "Epoch 9/150\n",
+      "30/30 [==============================] - 17s 576ms/step - loss: 0.5580 - mean_absolute_error: 0.5580 - val_loss: 0.6387 - val_mean_absolute_error: 0.6387\n",
+      "Epoch 10/150\n",
+      "30/30 [==============================] - 17s 564ms/step - loss: 0.5574 - mean_absolute_error: 0.5574 - val_loss: 0.6781 - val_mean_absolute_error: 0.6781\n",
+      "Epoch 11/150\n",
+      "30/30 [==============================] - 17s 575ms/step - loss: 0.5271 - mean_absolute_error: 0.5271 - val_loss: 0.6144 - val_mean_absolute_error: 0.6144\n",
+      "Epoch 12/150\n",
+      "30/30 [==============================] - 17s 577ms/step - loss: 0.5406 - mean_absolute_error: 0.5406 - val_loss: 0.6600 - val_mean_absolute_error: 0.6600\n",
+      "Epoch 13/150\n",
+      "30/30 [==============================] - 17s 576ms/step - loss: 0.5564 - mean_absolute_error: 0.5564 - val_loss: 0.6140 - val_mean_absolute_error: 0.6140\n",
+      "Epoch 14/150\n",
+      "30/30 [==============================] - 17s 586ms/step - loss: 0.5290 - mean_absolute_error: 0.5290 - val_loss: 0.6636 - val_mean_absolute_error: 0.6636\n",
+      "Epoch 15/150\n",
+      "30/30 [==============================] - 17s 575ms/step - loss: 0.5318 - mean_absolute_error: 0.5318 - val_loss: 0.6127 - val_mean_absolute_error: 0.6127\n",
+      "Epoch 16/150\n",
+      "30/30 [==============================] - 17s 578ms/step - loss: 0.5363 - mean_absolute_error: 0.5363 - val_loss: 0.5980 - val_mean_absolute_error: 0.5980\n",
+      "Epoch 17/150\n",
+      "30/30 [==============================] - 18s 590ms/step - loss: 0.5241 - mean_absolute_error: 0.5241 - val_loss: 0.6191 - val_mean_absolute_error: 0.6191\n",
+      "Epoch 18/150\n",
+      "30/30 [==============================] - 17s 578ms/step - loss: 0.5399 - mean_absolute_error: 0.5399 - val_loss: 0.6201 - val_mean_absolute_error: 0.6201\n",
+      "Epoch 19/150\n",
+      "30/30 [==============================] - 17s 579ms/step - loss: 0.5237 - mean_absolute_error: 0.5237 - val_loss: 0.6030 - val_mean_absolute_error: 0.6030\n",
+      "Epoch 20/150\n",
+      "30/30 [==============================] - 17s 581ms/step - loss: 0.5351 - mean_absolute_error: 0.5351 - val_loss: 0.6028 - val_mean_absolute_error: 0.6028\n",
+      "Epoch 21/150\n",
+      "30/30 [==============================] - 17s 577ms/step - loss: 0.5215 - mean_absolute_error: 0.5215 - val_loss: 0.6194 - val_mean_absolute_error: 0.6194\n",
+      "Epoch 22/150\n",
+      "30/30 [==============================] - 17s 585ms/step - loss: 0.5180 - mean_absolute_error: 0.5180 - val_loss: 0.6215 - val_mean_absolute_error: 0.6215\n",
+      "Epoch 23/150\n",
+      "30/30 [==============================] - 17s 584ms/step - loss: 0.5163 - mean_absolute_error: 0.5163 - val_loss: 0.5963 - val_mean_absolute_error: 0.5963\n",
+      "Epoch 24/150\n",
+      "30/30 [==============================] - 17s 583ms/step - loss: 0.5179 - mean_absolute_error: 0.5179 - val_loss: 0.6150 - val_mean_absolute_error: 0.6150\n",
+      "Epoch 25/150\n",
+      "30/30 [==============================] - 17s 585ms/step - loss: 0.5419 - mean_absolute_error: 0.5419 - val_loss: 0.6125 - val_mean_absolute_error: 0.6125\n",
+      "Epoch 26/150\n",
+      "30/30 [==============================] - 17s 579ms/step - loss: 0.5082 - mean_absolute_error: 0.5082 - val_loss: 0.6135 - val_mean_absolute_error: 0.6135\n",
+      "Epoch 27/150\n",
+      "30/30 [==============================] - 17s 574ms/step - loss: 0.5213 - mean_absolute_error: 0.5213 - val_loss: 0.5925 - val_mean_absolute_error: 0.5925\n",
+      "Epoch 28/150\n",
+      "30/30 [==============================] - 17s 586ms/step - loss: 0.5196 - mean_absolute_error: 0.5196 - val_loss: 0.6860 - val_mean_absolute_error: 0.6860\n",
+      "Epoch 29/150\n",
+      "30/30 [==============================] - 17s 582ms/step - loss: 0.5134 - mean_absolute_error: 0.5134 - val_loss: 0.6440 - val_mean_absolute_error: 0.6440\n",
+      "Epoch 30/150\n",
+      "30/30 [==============================] - 17s 575ms/step - loss: 0.5206 - mean_absolute_error: 0.5206 - val_loss: 0.6335 - val_mean_absolute_error: 0.6335\n",
+      "Epoch 31/150\n",
+      "30/30 [==============================] - 17s 580ms/step - loss: 0.5262 - mean_absolute_error: 0.5262 - val_loss: 0.5269 - val_mean_absolute_error: 0.5269\n",
+      "Epoch 32/150\n",
+      "30/30 [==============================] - 18s 590ms/step - loss: 0.4896 - mean_absolute_error: 0.4896 - val_loss: 0.5942 - val_mean_absolute_error: 0.5942\n",
+      "Epoch 33/150\n",
+      "30/30 [==============================] - 18s 595ms/step - loss: 0.4833 - mean_absolute_error: 0.4833 - val_loss: 0.5953 - val_mean_absolute_error: 0.5953\n",
+      "Epoch 34/150\n",
+      "30/30 [==============================] - 18s 597ms/step - loss: 0.5018 - mean_absolute_error: 0.5018 - val_loss: 0.6206 - val_mean_absolute_error: 0.6206\n",
+      "Epoch 35/150\n",
+      "30/30 [==============================] - 17s 586ms/step - loss: 0.4944 - mean_absolute_error: 0.4944 - val_loss: 0.6328 - val_mean_absolute_error: 0.6328\n",
+      "Epoch 36/150\n",
+      "30/30 [==============================] - 18s 595ms/step - loss: 0.4938 - mean_absolute_error: 0.4938 - val_loss: 0.6216 - val_mean_absolute_error: 0.6216\n",
+      "Epoch 37/150\n",
+      "30/30 [==============================] - 17s 582ms/step - loss: 0.5333 - mean_absolute_error: 0.5333 - val_loss: 0.6084 - val_mean_absolute_error: 0.6084\n",
+      "Epoch 38/150\n",
+      "30/30 [==============================] - 18s 595ms/step - loss: 0.4836 - mean_absolute_error: 0.4836 - val_loss: 0.6191 - val_mean_absolute_error: 0.6191\n",
+      "Epoch 39/150\n",
+      "30/30 [==============================] - 18s 596ms/step - loss: 0.4761 - mean_absolute_error: 0.4761 - val_loss: 0.5658 - val_mean_absolute_error: 0.5658\n",
+      "Epoch 40/150\n",
+      "30/30 [==============================] - 18s 595ms/step - loss: 0.4811 - mean_absolute_error: 0.4811 - val_loss: 0.5897 - val_mean_absolute_error: 0.5897\n",
+      "Epoch 41/150\n",
+      "30/30 [==============================] - 17s 584ms/step - loss: 0.4801 - mean_absolute_error: 0.4801 - val_loss: 0.6049 - val_mean_absolute_error: 0.6049\n",
+      "Epoch 42/150\n",
+      "30/30 [==============================] - 18s 591ms/step - loss: 0.4827 - mean_absolute_error: 0.4827 - val_loss: 0.5888 - val_mean_absolute_error: 0.5888\n",
+      "Epoch 43/150\n",
+      "30/30 [==============================] - 18s 595ms/step - loss: 0.4878 - mean_absolute_error: 0.4878 - val_loss: 0.5934 - val_mean_absolute_error: 0.5934\n",
+      "Epoch 44/150\n",
+      "30/30 [==============================] - 18s 589ms/step - loss: 0.5176 - mean_absolute_error: 0.5176 - val_loss: 0.6124 - val_mean_absolute_error: 0.6124\n",
+      "Epoch 45/150\n",
+      "30/30 [==============================] - 18s 595ms/step - loss: 0.4684 - mean_absolute_error: 0.4684 - val_loss: 0.6390 - val_mean_absolute_error: 0.6390\n",
+      "Epoch 46/150\n",
+      "30/30 [==============================] - 18s 595ms/step - loss: 0.4705 - mean_absolute_error: 0.4705 - val_loss: 0.5811 - val_mean_absolute_error: 0.5811\n",
+      "Epoch 47/150\n",
+      "30/30 [==============================] - 18s 589ms/step - loss: 0.4757 - mean_absolute_error: 0.4757 - val_loss: 0.5514 - val_mean_absolute_error: 0.5514\n",
+      "Epoch 48/150\n",
+      "30/30 [==============================] - 17s 580ms/step - loss: 0.4735 - mean_absolute_error: 0.4735 - val_loss: 0.6070 - val_mean_absolute_error: 0.6070\n",
+      "Epoch 49/150\n",
+      "30/30 [==============================] - 17s 586ms/step - loss: 0.4601 - mean_absolute_error: 0.4601 - val_loss: 0.5289 - val_mean_absolute_error: 0.5289\n",
+      "Epoch 50/150\n"
      ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "30/30 [==============================] - 18s 591ms/step - loss: 0.4404 - mean_absolute_error: 0.4404 - val_loss: 0.5723 - val_mean_absolute_error: 0.5723\n",
+      "Epoch 51/150\n",
+      "30/30 [==============================] - 18s 598ms/step - loss: 0.4690 - mean_absolute_error: 0.4690 - val_loss: 0.5851 - val_mean_absolute_error: 0.5851\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<tensorflow.python.keras.callbacks.History at 0x7ff0881f3898>"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -560,7 +672,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 34,
    "id": "worldwide-utilization",
    "metadata": {},
    "outputs": [
@@ -568,16 +680,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "51/51 [==============================] - 5s 103ms/step - loss: 1.3578 - mean_absolute_error: 1.3578\n"
+      "26/51 [==============>...............] - ETA: 10s - loss: 0.5705 - mean_absolute_error: 0.5705WARNING:tensorflow:Your input ran out of data; interrupting training. Make sure that your dataset or generator can generate at least `steps_per_epoch * epochs` batches (in this case, 51 batches). You may need to use the repeat() function when building your dataset.\n",
+      "51/51 [==============================] - 11s 215ms/step - loss: 0.5705 - mean_absolute_error: 0.5705\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "[1.3578271865844727, 1.3578271865844727]"
+       "[0.5704861283302307, 0.5704861283302307]"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -588,7 +701,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 35,
    "id": "descending-reaction",
    "metadata": {},
    "outputs": [
@@ -596,16 +709,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "12/12 [==============================] - 0s 4ms/step - loss: 2.4645 - mean_absolute_error: 2.4645\n"
+      "12/12 [==============================] - 0s 13ms/step - loss: 4.2460 - mean_absolute_error: 4.2460\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "[2.4645349979400635, 2.4645349979400635]"
+       "[4.246045112609863, 4.246045112609863]"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
