--- a/Regression-pseudo_labeling.ipynb
+++ b/Regression-pseudo_labeling.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "id": "threaded-girlfriend",
    "metadata": {},
    "outputs": [
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 10,
    "id": "offshore-collar",
    "metadata": {},
    "outputs": [
@@ -200,7 +200,7 @@
        "[15058 rows x 3 columns]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -213,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 14,
    "id": "dimensional-naples",
    "metadata": {},
    "outputs": [
@@ -221,15 +221,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "# confident predictions: 349\n",
-      "# confident 1 (ER): 349\n",
-      "# confident 0 (HE): 0\n"
+      "# confident predictions: 1103\n",
+      "# confident 1 (ER): 1102\n",
+      "# confident 0 (HE): 1\n"
      ]
     }
    ],
    "source": [
     "# select the most confident classification predictions\n",
-    "t_confidence = 0.99\n",
+    "t_confidence = 0.98\n",
     "confidence_condition = (\n",
     "    (df_sub_private['classification_predictions'] >= t_confidence) | \\\n",
     "    (df_sub_private['classification_predictions'] <= 1 - t_confidence)\n",
@@ -244,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 15,
    "id": "dress-tutorial",
    "metadata": {},
    "outputs": [
@@ -253,11 +253,31 @@
      "output_type": "stream",
      "text": [
       "ER regression rounded predictions:\n",
-      "20    328\n",
-      "6      21\n",
+      "20    894\n",
+      "6     204\n",
+      "1       4\n",
       "Name: regression_predictions, dtype: int64\n",
       "HE regression rounded predictions:\n",
-      "Series([], Name: regression_predictions, dtype: int64)\n"
+      "30    1\n",
+      "Name: regression_predictions, dtype: int64\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/usr/local/lib/python3.6/dist-packages/ipykernel_launcher.py:3: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  This is separate from the ipykernel package so we can avoid doing imports until\n",
+      "/usr/local/lib/python3.6/dist-packages/ipykernel_launcher.py:6: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  \n"
      ]
     }
    ],
@@ -277,7 +297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 16,
    "id": "civilian-montana",
    "metadata": {},
    "outputs": [
@@ -285,18 +305,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "100.0% of confident ER images are in private test data\n"
-     ]
-    },
-    {
-     "ename": "ZeroDivisionError",
-     "evalue": "division by zero",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m\u001b[0m",
-      "\u001b[0;31mZeroDivisionError\u001b[0mTraceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-5-63291624aa42>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0mconfident_images_he\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0mstr\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mPRIVATE_PATH_NEW\u001b[0m \u001b[0;34m/\u001b[0m \u001b[0;34mf'{x}.png'\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mx\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mdf_confident_he\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'id'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mvalues\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34mf'{100*sum([x in private_images for x in confident_images_er]) / len(confident_images_er)}% of confident ER images are in private test data'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 6\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34mf'{100*sum([x in private_images for x in confident_images_he]) / len(confident_images_he)}% of confident HE images are in private test data'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mZeroDivisionError\u001b[0m: division by zero"
+      "100.0% of confident ER images are in private test data\n",
+      "100.0% of confident HE images are in private test data\n"
      ]
     }
    ],
